Making a new post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   {%- include head.html -%}
 
   <body>
+    <div id="body-wrapper">
 
     {%- include header.html -%}
 
@@ -14,6 +15,8 @@
     </main>
 
     {%- include footer.html -%}
+
+  </div>
 
   </body>
 
