--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -12,11 +12,11 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit: 15px !default;
 
-$text-color: rgb(83, 83, 83) !default;
-$background-color: #fdfdfd !default;
+$text-color: rgb(61, 61, 61) !default;
+$background-color: #f8f8f8 !default;
 $brand-color: #2a7ae2 !default;
 
-$grey-color: #929292 !default;
+$grey-color: #727272 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
 $grey-color-dark: darken($grey-color, 25%) !default;
 
