--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,23 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta content="{{ site.title }}" property="og:site_name" />
+  {% if page.title %}
+  <meta content="{{ page.title }}" property="og:title" />
+  {% else %}
+  <meta content="{{ site.title }}" property="og:title" />
+  {% endif %} {% if page.title %}
+  <meta content="article" property="og:type" />
+  {% else %}
+  <meta content="website" property="og:type" />
+  {% endif %} {% if page.url %}
+  <meta content="{{ page.url | absolute_url }}" property="og:url" />
+  {% endif %}
+  <meta content="{{ site.url }}/assets/og_image.png" property="og:image" />
+  <link rel="author" href="../humans.txt" />
+  {%- seo -%} <link rel="stylesheet" href="{{
+    "/assets/main.css" | relative_url
+  }}"> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
+  site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}
 </head>
