--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,10 @@
 <head>
   <meta charset="utf-8" />
+  <link rel="author" href="../humans.txt" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta content="{{ site.title }}" property="og:site_name" />
+  <meta content="{{ site.url }}/assets/og_image.png" property="og:image" />
   {% if page.title %}
   <meta content="{{ page.title }}" property="og:title" />
   {% else %}
@@ -13,10 +15,7 @@
   <meta content="website" property="og:type" />
   {% endif %} {% if page.url %}
   <meta content="{{ page.url | absolute_url }}" property="og:url" />
-  {% endif %}
-  <meta content="{{ site.url }}/assets/og_image.png" property="og:image" />
-  <link rel="author" href="../humans.txt" />
-  {%- seo -%} <link rel="stylesheet" href="{{
+  {% endif %} {%- seo -%} <link rel="stylesheet" href="{{
     "/assets/main.css" | relative_url
   }}"> {%- feed_meta -%} {%- if jekyll.environment == 'production' and
   site.google_analytics -%} {%- include google-analytics.html -%} {%- endif -%}
